<resources>
    <string name="app_name">AGServiceScheduler</string>
    <string name="title_activity_maps">Map</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="i_m_a_customer">I\'m a Customer</string>
    <string name="i_m_a_driver">I\'m a Driver</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="splash_image">Splash Image</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="schedule_service">Schedule Service</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="customer_profile">Customer Profile</string>
    <string name="service_type">Bulk / Cylinder / Service</string>
    <string name="driver_profile">Driver Profile</string>
    <string name="specify_a_delivery_location">Delivery Location</string>
    <string name="customer_location">Customer Location:</string>
    <string name="bulk">Bulk</string>
    <string name="driver_type">Driver Type</string>
    <string name="cylinder">Cylinder</string>
    <string name="service">Service</string>
</resources>