<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".CustomerSettingsActivity">
    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18sp"
        android:autofillHints="@string/name"
        android:background="@null"
        android:hint="@string/name"
        android:inputType="text" />
    <EditText
        android:id="@+id/customer_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18sp"
        android:autofillHints="@string/phone"
        android:background="@null"
        android:hint="@string/phone"
        android:inputType="phone" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_button"
        android:text="@string/confirm"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back_button"
        android:text="@string/back"/>
</LinearLayout>