<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerMapActivity">
    <fragment
        android:id="@+id/customer_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/logout" />
        <Button
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/settings"
            tools:ignore="RelativeOverlap" />

        <!--<androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings"
            android:layout_margin="20sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/autocomplete_fragment"
                android:text="@string/specify_a_delivery_location"/>
            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </androidx.cardview.widget.CardView>-->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/driverInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_gravity="bottom"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:visibility="gone">
        <ImageView
            android:id="@+id/driverImage"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:contentDescription="@string/driver_profile"
            android:padding="10sp"
            android:src="@mipmap/ic_truck_round" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10sp"
            android:paddingEnd="10sp">

            <TextView
                android:id="@+id/driverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/driverPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/driverType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardview_light_background"
        android:layout_gravity="bottom">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/radioGroup"
        android:text="@string/driver_type"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <RadioButton
        android:id="@+id/bulk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/bulk"/>
    <RadioButton
        android:id="@+id/cylinder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cylinder" />
    <RadioButton
        android:id="@+id/service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service" />
    </RadioGroup>
    <Button
        android:id="@+id/schedule_button"
        style="@style/FirebaseUI.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:text="@string/schedule_service"/>
    <Button
        android:id="@+id/cancel_button"
        style="@style/FirebaseUI.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/cancel_request"
        android:textColor="@color/cardview_dark_background"
        android:background="@color/fui_buttonShadow"
        android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>