<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverMapsActivity">
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/logout"/>
    <Button
        android:id="@+id/driverSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/settings"/>
    <fragment
    android:id="@+id/driver_map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     />
    <LinearLayout
        android:id="@+id/customerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:visibility="gone">
        <ImageView
            android:id="@+id/customerImage"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:contentDescription="@string/customer_profile"
            android:padding="10sp"
            android:src="@mipmap/ic_cust_icon" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10sp"
            android:paddingEnd="10sp">
            <TextView
                android:id="@+id/customerLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="18sp"
                android:text="@string/customer_location"/>
            <TextView
                android:id="@+id/customerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/customerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>